[project]
name = "langgraph-agent-project"
version = "0.1.0"
description = ""
authors = [
    {name = "krishna Teja",email = "krishnatejaoutlook@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "langgraph (>=1.0.4,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
